# basic_mobile_robot

./: CMakeLists.txt  package.xml
basic_mobile_robot/: follow.py  follow_line.py  viewer.py
config/: rviz.rviz  slam_sync.yaml
demos/xacros/: arg.sdf.xacro
launch/: localization.launch.py  mapping.launch.py  simple.launch.py  smalltown.launch.py  spawn.launch.py  spawn_param.launch.py
launch/articubot_one/: articubot_one.launch.py  rsp.launch.py
launch/follow/: follow.launch.py
launch/tutorials/: simple.launch.py  test_xacro.launch.py  test_xacro_cmd.launch.py
maps/: smalltown_world.yaml
models/basic_mobile_robot/: model.config  model.sdf  model.sdf.xacro
worlds/: bug0.world  empty.world  maze.world  smalltown.world
